WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130489
[iOS][WebKit2] Back-forward swipe doesn't always complete with fingers down
https://bugs.webkit.org/show_bug.cgi?id=130489
Summary
[iOS][WebKit2] Back-forward swipe doesn't always complete with fingers down
Tim Horton
Reported
2014-03-19 17:24:39 PDT
<
rdar://problem/16027007
>
Attachments
patch
(2.40 KB, patch)
2014-03-19 17:30 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-03-19 17:30:32 PDT
Created
attachment 227239
[details]
patch
Tim Horton
Comment 2
2014-03-19 17:33:29 PDT
http://trac.webkit.org/changeset/165934
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug