[iOS][WebKit2] Back-forward swipe doesn't always complete with fingers down https://bugs.webkit.org/show_bug.cgi?id=130489 <rdar://problem/16027007>

Reviewed by Simon Fraser.

* UIProcess/ios/ViewGestureControllerIOS.mm:
(WebKit::ViewGestureController::beginSwipeGesture):
In order to have fingers-down swipe completion work correctly, we need
to give UIKit an empty interactive update block.


Canonical link: https://commits.webkit.org/148483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165934 268f45cc-cd09-0410-ab3c-d52691b4dbfc